@@ -155,3 +155,4 @@ v 1.9:
 	- Treat all world names as lower case for file handling (please check in your worlds folder. You should have no folders with upper case letters from now).
 	- Auto rename all case sensitive world folders to lower case (if possible).
 	- Update GlobalGroups.yml for new/changed Towny permission nodes.
+	- Stop attempting to push empty permissions when players edit the yml's incorrectly.
